--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "bs-auth0-session",
+  "private":true,
   "version": "0.0.0-development",
   "description": "Session management for ReasonReact using Auth0 for login.",
   "main": "src/WebAuth.bs.js",
   "scripts": {
-    "build": "bsb -clean-world -make-world",
     "clean": "bsb -clean-world",
-    "prepack": "bsb -clean-world",
+    "build": "bsb -make-world",
+    "start": "bsb -make-world -w",
     "format": "bsrefmt --in-place **/*.re",
     "test": "exit 0",
     "semantic-release": "semantic-release"
@@ -28,24 +29,15 @@
     "url": "https://github.com/mscharley/bs-auth0-session/issues"
   },
   "homepage": "https://github.com/mscharley/bs-auth0-session#readme",
-  "peerDependencies": {
-    "auth0-js": "^9.8.1",
-    "bs-auth0-js": "^0.1.0",
-    "bs-platform": "^4.0.7",
-    "bs-querystringify": "^1.0.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "reason-react": "^0.5.3"
+  "dependencies": {
+    "auth0-js": "^9.16.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "reason-react": "^0.9.1"
   },
   "devDependencies": {
-    "auth0-js": "^9.8.1",
-    "bs-auth0-js": "^0.1.0",
-    "bs-platform": "^4.0.7",
-    "bs-querystringify": "^1.0.0",
-    "querystringify": "^2.1.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "reason-react": "^0.5.3",
-    "semantic-release": "^15.12.0"
+    "bs-platform": "^9.0.2",
+    "querystringify": "^2.2.0",
+    "semantic-release": "^17.4.4"
   }
 }
